# ml_server_scenario

./: CMakeLists.txt  README.md  create_unixmake_gcc.sh  start_test.py
include/boost/lockfree/: queue.hpp
include/ze_info/: capabilities.hpp  client.hpp  offline_compiler.hpp  server.hpp  simple_run.hpp  text_formatter.hpp  utils.hpp  ze_info.hpp  ze_utils.hpp  zenon.hpp
kernels/: module.cl  module.spv
level_zero/windows/lib/: ze_loader.lib
ocloc/: ocloc64.lib
ocloc/linux/: ocloc
ocloc/windows/: ocloc64.lib
src/: capabilities.cpp  client.cpp  main.cpp  offline_compiler.cpp  server.cpp  simple_run.cpp  text_formatter.cpp  utils.cpp  ze_utils.cpp  zenon.cpp
tbb/lib/: tbb12_debug.lib  tbbbind.lib  tbbbind_2_0.lib  tbbbind_2_0_debug.lib  tbbbind_2_4.lib  tbbbind_2_4_debug.lib  tbbbind_debug.lib
